Fixed docker envs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3'
 services:
   frontend:
     build:
-        context: .
-        dockerfile: frontend.Dockerfile
+      context: .
+      dockerfile: frontend.Dockerfile
     image: frontend-service
     ports:
       - "8501:8501"
     depends_on:
       - backend
     environment:
-      - BACKEND_URL=http://backend:8000
+      - OPENAI_API_KEY=($${OPENAI_API_KEY})
+    env_file:
+      - .env
 
   backend:
     build:
