--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
         context: .
         dockerfile: backend.Dockerfile
+    volumes:
+      - /etc/letsencrypt/live/iclstaff.com:/usr/src/app/.streamlit:ro
     image: backend-service
     ports:
       - "8000:8000"
