--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: frontend.Dockerfile
     image: frontend-service
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
+    # volumes:
+    #   - /etc/letsencrypt:/etc/letsencrypt
     ports:
       - "80:80"
     depends_on:
