--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,8 +14,8 @@ magicEnabled = true
 
 [server]
 
-# sslCertFile = '/usr/src/app/certs/fullchain.pem'
-# sslKeyFile = '/usr/src/app/certs/privkey.pem'
+sslCertFile = '/usr/src/app/certs/fullchain.pem'
+sslKeyFile = '/usr/src/app/certs/privkey.pem'
 
 folderWatchBlacklist = ['/src']
 headless = true
